# blueline

./: .gitignore  README.md  update.md  update1.md  update2.md
BluetoothAudioDevices/: README.md
BluetoothAudioDevices/src/: AudioIOManager.h  BindAudioButton.qml  Blueline.pro  Device.cpp  DeviceManager.h  Main.qml  UserInterface.h  blueline.code-workspace  qml.qrc
ComponentsToBeIntegrated/BluetoothAudioDevices/: .gitignore
ComponentsToBeIntegrated/BluetoothAudioDevices/src/: AudioIOManager.cpp  BindAudioDialog.qml  BluetoothManager.cpp  BluetoothManager.h  Device.h  DeviceManager.cpp  MainView.qml  UserInterface.cpp
ComponentsToBeIntegrated/NetworkRouting/: Logger.h  NftGenerator.h
NetworkAudioDevices/: AudioService.h  AudioServiceFactory.h  BroadcastDiscoveryService.h  CMakeLists.txt  DevNotes.md  InterfaceSocket.h  Job.h  MainWindow.cpp  MainWindow.h  Message.h  NetworkManager.cpp  NetworkManager.h  NetworkPeer.h  README.md  main.cpp
NetworkAudioDevices/tmp/: InterfaceSocket.h
NetworkRouting/: IpInterfacesManager.h  Ipmon.cpp  Ipmon.h  NftablesManager.cpp
diagrams/: class.md
src/: AudioIOManager.cpp  AudioIOManager.h  AudioService.h  AudioServiceFactory.h  BluetoothManager.cpp  BluetoothManager.h  CMakeLists.txt  Device.cpp  Device.h  DeviceItem.qml  DeviceManager.cpp  DeviceManager.h  MainWindow.cpp  Message.cpp  Message.h  NetworkManager.cpp  NetworkManager.h  UserInterface.cpp  UserInterface.h  main.cpp
src/MelodyColor/: CMakeLists.txt  README.md
src/MelodyColor/qml/: main.qml
src/MelodyColor/src/: AudioCapture.h  AudioPlayer.h  AudioProcessor.h  AudioService.h  AudioServiceFactory.h  AudioStreamer.h  SpectrumVisualizer.h  main.cpp
utils/: DevNotes.md  includes.sh
utils/FutureComponents/BluetoothAudioDevices/src/: CMakeLists.txt  DeviceListView.qml
utils/FutureComponents/MelodyColor/: CMakeLists.txt  README.md
utils/FutureComponents/MelodyColor/qml/: main.qml  qml.qrc
utils/FutureComponents/MelodyColor/src/: SpectrumAnalyser.cpp  SpectrumAnalyser.h  main.cpp
utils/FutureComponents/NetworkRouting/: NftablesManager.h
utils/diagrams/: IpAudioFlow.md  diagram.md
